--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <title>Typing Test</title>
     <link rel="stylesheet" href="style.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    
 </head>
 
 <body>
 
     <div class="container">
-        <h2 id="banner">TYPING TEST</h2>
-        <div class="info">
+        <h2 id="banner" class="animate__animated animate__backInDown animate__infinite	infinite">TYPING TEST</h2>
+        <div class="info animate__animated animate__backInLeft animate__repeat-1">
             <div class="info-box">
                 <p><i class="fa fa-tachometer"></i></p>
                 <h5>00</h5>
@@ -37,16 +42,16 @@
                 <p>Time left</p>
             </div>
         </div>
-        <div class="text-area">
+        <div class="text-area animate__animated animate__backInLeft" >
             <h2>**Write the given text**</h2>
             <h4 id="text-area1"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint eos iste perspiciatis,
                 quo accusamus minima. Incidunt eum esse dolorem rem nihil excepturi, unde repellendus exercitationem at
                 iure, doloremquuam praesentium deserunt repellat. </h4>
                  <h3>**Good Luck**</h3>  
                </div> 
-        <textarea name="" id="" placeholder="Enter your text...."></textarea>
+        <textarea name="" id="" placeholder="Enter your text...." class="animate__animated animate__backInRight"></textarea>
    
-        <button id="btn">Start Test</button>
+        <button id="btn"class="animate__animated animate__backInUp">Start Test</button>
   
     </div>  
    <script src="main.js"type="module"></script>
